--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,8 @@
         </title>
         <body>
             <h1>My Cousera course</h1>
+            <h2>Next heading</h2>
+            <p>Well done</p>
         </body>
     </head>
 </html>
